# knot-hal-source

./: Makefile.am  comm_old.c
include/: comm.h  time.h
src/: avr_errno.h
src/drivers/: phy_driver_nrf24.c  phy_driver_nrf24.h
src/hal/comm/: Makefile.am  comm.c  comm_nrf24l01.c  nrf24l01_ll.h
src/hal/time/: time_avr.cpp  time_linux.c
src/nrf24l01/: Makefile.am  nrf24l01.c  nrf24l01.h
src/nrfd/: manager.c
src/spi/: spi.h  spi_arduino.c  spi_linux.c
tools/: frag1.c  rpirx.c  rpitx.c  sniffer.c  thing.ino
